--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,7 +15,7 @@
                 Your comprehensive financial tracking solution. Monitor income, manage expenses, 
                 and generate insightful reports with ease.
             </p>
-            <a href="{{ url_for('login') }}" class="btn btn-primary btn-lg px-5">
+            <a href="{{ url_for('main.login') }}" class="btn btn-primary btn-lg px-5">
                 <i class="fas fa-sign-in-alt me-2"></i>Get Started
             </a>
         </div>
