--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -116,7 +116,7 @@
 
                     <!-- Submit Buttons -->
                     <div class="d-flex justify-content-between">
-                        <a href="{{ url_for('users') }}" class="btn btn-outline-secondary">
+                        <a href="{{ url_for('main.users') }}" class="btn btn-outline-secondary">
                             <i class="fas fa-arrow-left me-1"></i>Back to Users
                         </a>
                         {{ form.submit(class="btn btn-primary") }}
