--- a/app/templates/errors/500.html
+++ b/app/templates/errors/500.html
@@ -16,7 +16,7 @@
             </p>
             
             <div class="d-flex justify-content-center gap-3">
-                <a href="{{ url_for('dashboard') }}" class="btn btn-primary">
+                <a href="{{ url_for('main.dashboard') }}" class="btn btn-primary">
                     <i class="fas fa-home me-1"></i>Go to Dashboard
                 </a>
                 <button onclick="location.reload()" class="btn btn-outline-primary">
