--- a/app/templates/transactions.html
+++ b/app/templates/transactions.html
@@ -11,10 +11,10 @@
     </div>
     {% if current_user.has_permission('create') %}
     <div class="d-flex gap-2">
-        <a href="{{ url_for('add_transaction') }}?type=income" class="btn btn-success">
+        <a href="{{ url_for('main.add_transaction') }}?type=income" class="btn btn-success">
             <i class="fas fa-plus-circle me-1"></i>Add Income
         </a>
-        <a href="{{ url_for('add_transaction') }}?type=expense" class="btn btn-danger">
+        <a href="{{ url_for('main.add_transaction') }}?type=expense" class="btn btn-danger">
             <i class="fas fa-minus-circle me-1"></i>Add Expense
         </a>
     </div>
@@ -187,7 +187,7 @@
             <h5 class="text-muted">No transactions found</h5>
             <p class="text-muted">{% if request.args %}Try adjusting your search criteria{% else %}Start by adding your first transaction{% endif %}</p>
             {% if current_user.has_permission('create') %}
-            <a href="{{ url_for('add_transaction') }}" class="btn btn-primary">
+            <a href="{{ url_for('main.add_transaction') }}" class="btn btn-primary">
                 <i class="fas fa-plus me-1"></i>Add Transaction
             </a>
             {% endif %}
